# RMP

./: .gitignore  .ideas.md  Cargo.toml  README.md  roadmap.md
cli/: Cargo.toml  README.md
cli/src/: cmd_parser.rs  main.rs
cli/src/commands/: downloader.rs  mod.rs  player.rs  playlist.rs
cli/src/commands/player/: device.rs  position.rs  queue.rs  volume.rs
client/: Cargo.toml
client/src/: data.rs  lib.rs
gui/: Cargo.toml  README.md
gui/src/: main.rs
gui/src/view/: currently_playing_bar.rs  downloader_tab.rs  mod.rs  player_tab.rs  song_list.rs  song_queue.rs  title_bar.rs
models/: Cargo.toml
models/src/: lib.rs  youtube_playlist_page.rs  ytdlp_info.rs
scripts/: build.sh  clean.sh  dependency_checker.py  init.sh
server/: Cargo.toml  README.md
server/src/: config.rs  downloader.rs  error.rs  main.rs  player.rs  playlist_manager.rs  server.rs
server/src/downloader/: backend.rs  config.rs  handle.rs  message.rs  yt_playlist_models.rs
server/src/downloader/backend/: ytdlp.rs
server/src/player/: rodio_player.rs
shared/: Cargo.toml  README.md
shared/src/: audio_device_utils.rs  client.rs  command.rs  download.rs  lib.rs  message.rs  path.rs  playlist.rs  socket.rs  song.rs
shared/src/client/: error.rs
shared/src/error/: client.rs  mod.rs  server.rs
shared/src/server/: error.rs
tui/: Cargo.toml  README.md
tui/src/: main.rs
