[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rmp_gui"
path = "src/main.rs"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
shared = { path = "../shared" }
client = { path = "../client" }
log.workspace = true
uuid.workspace = true
logger.workspace = true
time.workspace = true
