[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
models = { path = "../models" }

stp = { git = "https://github.com/bowarc/stp" }
nonblock = { git = "https://github.com/Bowarc/nonblock-rs", version = "0.2.0" }

ctrlc = "3.4.5"
spin_sleep_util = "0.1.1"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

logger.workspace = true
log.workspace = true
time.workspace = true
networking.workspace = true
uuid.workspace = true
rodio.workspace = true

