[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "shared"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
thiserror.workspace = true
uuid.workspace = true

networking.workspace = true
ron.workspace = true
derivative = "2.2.0"

rodio.workspace = true

log.workspace = true
ffprobe = "0.4.0"

