[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "shared"
crate-type = ["rlib"]

[features]
server = ["dep:ffprobe"] # Enables server only functionalities like fs access

[dependencies]
serde = { version = "1.0.208", features = [
  "derive",
] } # Also used by clients for deserialization
ron.workspace = true # Also used by clients for errors
thiserror.workspace = true
uuid.workspace = true

networking.workspace = true
derivative = "2.2.0"

rodio.workspace = true
log.workspace = true

ffprobe = { version = "0.4.0", optional = true } # Not used by clients as this is currently only used for manipulating audio files, which clients don't interact with
